# RayTracing

./: Box.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Hittable.h  Light.h  Material.cpp  Material.h  Quad.h  README.MD  Random.cpp  Random.h  Ray.cpp  Ray.h  RayTracing.cpp  RayTracing.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Vector2.h  Vector3.h  周末目标.md
output/: PathTracing@16spp0.8rr.ppm  RayTracing.ppm  RayTracing@1024ssp0.9rr.ppm  RayTracing@16spp0.9rr.ppm
